<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp"
    tools:context=".ui.dialog.MenuDialog">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_title"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:fontFamily="@font/comic_sans_ms"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/tv_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:fontFamily="@font/comic_sans_ms_bold"
        android:text="@string/player_1_win"
        android:gravity="center"
        android:textColor="@color/red"
        android:textSize="35sp"
        android:layout_marginTop="25dp"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <Button
        android:id="@+id/btn_play_again"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/text_play_again"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:background="@drawable/bg_edit_text_rounded_teal"
        app:layout_constraintTop_toBottomOf="@id/tv_result"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <Button
        android:id="@+id/btn_back_to_menu"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/text_back_to_menu"
        android:textSize="15sp"
        android:textColor="@color/white"
        android:background="@drawable/bg_edit_text_rounded_purple"
        app:layout_constraintTop_toBottomOf="@id/btn_play_again"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>