<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.menu.MenuPageActivity">

    <TextView
        android:id="@+id/tv_choose_opponent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:textAllCaps="true"
        android:textAlignment="center"
        android:text="@string/pilih_lawanmu"
        android:fontFamily="@font/comic_sans_ms"
        android:textColor="@color/black"
        android:layout_marginBottom="500dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <LinearLayout
        android:id="@+id/ll_menu_player"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="80dp"
        app:layout_constraintTop_toBottomOf="@id/tv_choose_opponent"
        app:layout_constraintStart_toStartOf="@id/tv_choose_opponent"
        app:layout_constraintEnd_toEndOf="@id/tv_choose_opponent"
        >
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:src="@drawable/ic_landing_page1"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/comic_sans_ms"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:textSize="22sp"
            tools:text="@string/jamal_vs_pemain"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_menu_cpu"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/ll_menu_player"
        app:layout_constraintStart_toStartOf="@id/ll_menu_player"
        app:layout_constraintEnd_toEndOf="@id/ll_menu_player"
        >
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:src="@drawable/ic_landing_page2"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/comic_sans_ms"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:textSize="22sp"
            tools:text="@string/jamal_vs_cpu"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>