<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".playgame.PlayActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/bg_gameplay"/>

    <ImageView
        android:id="@+id/iv_RPS"
        android:layout_width="170dp"
        android:layout_height="150dp"
        android:src="@drawable/ic_splash_screen1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="450dp"
        />

    <LinearLayout
        android:id="@+id/ll_player"
        android:layout_width="90dp"
        android:layout_height="300dp"
        app:layout_constraintTop_toBottomOf="@id/iv_RPS"
        app:layout_constraintRight_toLeftOf="@id/iv_RPS"
        android:orientation="vertical"
        android:layout_margin="10dp"
        android:weightSum="3"
        >
        <TextView
            android:id="@+id/tv_player"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="@color/blue"
            android:fontFamily="@font/comic_sans_ms_bold"
            android:textStyle="bold"
            android:textSize="20sp"
            tools:text="@string/jamal"/>
        <ImageView
            android:id="@+id/iv_rock_left_player"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_margin="8dp"
            android:src="@drawable/ic_rock"/>
        <ImageView
            android:id="@+id/iv_paper_left_player"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_margin="8dp"
            android:src="@drawable/ic_paper"/>
        <ImageView
            android:id="@+id/iv_scissor_left_player"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_margin="8dp"
            android:src="@drawable/ic_scissors"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_opponent"
        android:layout_width="90dp"
        android:layout_height="300dp"
        app:layout_constraintTop_toBottomOf="@id/iv_RPS"
        app:layout_constraintLeft_toRightOf="@id/iv_RPS"
        android:orientation="vertical"
        android:layout_margin="10dp"
        android:weightSum="3"
        >
        <TextView
            android:id="@+id/tv_opponent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="@color/blue"
            android:fontFamily="@font/comic_sans_ms_bold"
            android:textStyle="bold"
            android:textSize="20sp"
            tools:text="@string/cpu"/>
        <ImageView
            android:id="@+id/iv_rock_right_player"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_margin="8dp"
            android:src="@drawable/ic_rock"/>
        <ImageView
            android:id="@+id/iv_paper_right_player"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_margin="8dp"
            android:src="@drawable/ic_paper"/>
        <ImageView
            android:id="@+id/iv_scissor_right_player"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_margin="8dp"
            android:src="@drawable/ic_scissors"/>
    </LinearLayout>

    <FrameLayout
        android:id="@+id/fl_versus"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintDimensionRatio="5:4"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/ll_player"
        app:layout_constraintRight_toLeftOf="@id/ll_opponent"
        android:layout_marginTop="50dp"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="18dp"
        >
        <TextView
            android:id="@+id/tv_status_game"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:fontFamily="@font/comic_sans_ms_bold"
            android:textColor="@color/red"
            android:textSize="28sp"
            tools:text="@string/versus"/>
    </FrameLayout>

    <FrameLayout
        android:id="@+id/fl_restart"
        android:layout_width="0dp"
        android:layout_height="90dp"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        >
        <ImageView
            android:id="@+id/iv_restart"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:background="@drawable/bg_edit_text_rounded_white"
            android:src="@drawable/ic_refresh"/>
    </FrameLayout>

    <FrameLayout
        android:id="@+id/fl_close"
        android:layout_width="0dp"
        android:layout_height="75dp"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >
        <ImageView
            android:id="@+id/iv_close"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:src="@drawable/ic_close"/>
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>